changes before class

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .frame {
-    background: url("../assets/border.png");
+    background:  linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     background-position: center ;
     background-repeat: no-repeat;
     background-size: contain ;
@@ -14,4 +14,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.spot{
+    border: 10px #f0f0f0a9 solid;
 }
