--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ body {
     padding: 0;
     margin: 0;
 }
+.control-vidas{
+    font-size: 20px;
+}
 
 .frame {
     background:  linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
